# qemu

./: MAINTAINERS  README.md  hmp-commands-info.hx  luis.hjson  meson.build  qemu-options.hx  run.sh
.github/workflows/: build_test.yaml  create_release.yml
.gitlab-ci.d/opentitan/: bmref.yml  build.yml  ot-bmtests.yml  ot-smoke.yml  ot.clang_format  ot.clang_tidy  pylint-ot.yml  pylint.yml  qemu-ot.yml
accel/tcg/: cpu-exec.c  tb-maint.c
configs/devices/riscv32-softmmu/: default.mak
disas/: meson.build  riscv-zbr.c  riscv-zbr.h  riscv.c
docs/opentitan/: cfggen.md  checkregs.md  darjeeling.md  devproxy.md  dtm.md  earlgrey.md  flashgen.md  gdbreplay.md  gpio.md  gpiodev.md  index.md  jtag-dm.md  jtagmbx.md  lc_ctrl_dmi.md  otcfg.md  otpconv.md  otpdm.md  otptool.md  pymod.md  pyot.md  rom_ctrl.md  spi_device.md  spidevflash.md  tools.md  uartmux.md
gdbstub/: gdbstub.c
hw/: Kconfig  meson.build
hw/block/: m25p80.c  m25p80_sfdp.c  m25p80_sfdp.h  trace-events
hw/char/: Kconfig  meson.build
hw/core/: cpu-common.c  loader.c  meson.build
hw/display/: Kconfig  meson.build  trace-events
hw/ibexdemo/: ibexdemo_simctrl.c  ibexdemo_uart.c  meson.build
hw/intc/: sifive_plic.c  trace-events
hw/jtag/: Kconfig  meson.build  tap_ctrl.c  tap_ctrl_rbb.c  trace-events  trace.h
hw/misc/: Kconfig  meson.build  pulp_rv_dm.c  trace-events  unimp.c
hw/opentitan/: Kconfig  meson.build  ot_address_space.c  ot_aes.c  ot_alert.c  ot_alert_darjeeling.c  ot_alert_dj.c  ot_alert_earlgrey.c  ot_alert_eg.c  ot_aon_timer.c  ot_ast_darjeeling.c  ot_ast_dj.c  ot_ast_earlgrey.c  ot_ast_eg.c  ot_clkmgr.c  ot_common.c  ot_csrng.c  ot_dev_proxy.c  ot_dm_tl.c  ot_dma.c  ot_edn.c  ot_entropy_src.c  ot_flash.c  ot_gpio.c  ot_gpio_dj.c  ot_gpio_eg.c  ot_hmac.c  ot_i2c_dj.c  ot_ibex_wrapper.c  ot_ibex_wrapper_darjeeling.c  ot_ibex_wrapper_dj.c  ot_ibex_wrapper_earlgrey.c  ot_ibex_wrapper_eg.c  ot_kmac.c  ot_lc_ctrl.c  ot_lc_ctrl_matrix.c  ot_lc_defs.h  ot_lifecycle.c  ot_mbx.c  ot_otbn.c  (+33 more)
hw/opentitan/otbn/: Kconfig  meson.build
hw/opentitan/otbn/otbn/src/: csrs.rs  otbn.rs
hw/riscv/: Kconfig  debug.c  dm.c  dmi.c  dtm.c  ibex_common.c  ibex_gpio.c  ibexdemo.c  meson.build  opentitan.c  ot_darjeeling.c  ot_earlgrey.c  trace-events  trace.h
hw/ssi/: Kconfig  meson.build  ssi.c
hw/timer/: Kconfig  ibex_timer.c  meson.build
include/disas/: dis-asm.h
include/exec/: jtagstub.h  memory.h  poison.h
include/hw/: elf_ops.h  loader.h
include/hw/core/: cpu.h
include/hw/jtag/: jtagstub.h  tap_ctrl.h  tap_ctrl_rbb.h
include/hw/misc/: pulp_rv_dm.h  unimp.h
include/hw/opentitan/: ot_address_space.h  ot_aes.h  ot_alert.h  ot_alert_darjeeling.h  ot_alert_dj.h  ot_alert_earlgrey.h  ot_alert_eg.h  ot_aon_timer.h  ot_ast.h  ot_ast_darjeeling.h  ot_ast_dj.h  ot_ast_earlgrey.h  ot_ast_eg.h  ot_clkmgr.h  ot_common.h  ot_csrng.h  ot_dev_proxy.h  ot_dm_tl.h  ot_dma.h  ot_edn.h  ot_fifo32.h  ot_gpio.h  ot_gpio_dj.h  ot_gpio_eg.h  ot_hmac.h  ot_i2c_dj.h  ot_ibex_wrapper.h  ot_ibex_wrapper_darjeeling.h  ot_ibex_wrapper_dj.h  ot_ibex_wrapper_earlgrey.h  ot_ibex_wrapper_eg.h  ot_kmac.h  ot_lc_ctrl.h  ot_mbx.h  ot_otbn.h  ot_otp.h  ot_otp_be_if.h  ot_otp_darjeeling.h  ot_otp_dj.h  ot_otp_earlgrey.h  (+21 more)
include/hw/riscv/: debug.h  dm.h  dmi.h  dtm.h  ibex_common.h  ibex_gpio.h  ibex_irq.h  opentitan.h  ot_darjeeling.h  ot_earlgrey.h
include/hw/ssi/: ssi.h
include/qemu/: fifo8.h
jtag/: jtag_bitbang.c  meson.build  trace-events  trace.h
ot_utils/: build_binaries.py  parse_results.py  past_results.txt
python/qemu/jtag/: .pylintrc  __init__.py  bitbang.py  bits.py  jtag.py
python/qemu/ot/: .pylintrc  devproxy.py
qapi/: qom.json
scripts/: checkpatch.pl
scripts/jtag/: .pylintrc  bitbang.py  bits.py  jtag.py
scripts/opentitan/: .pylintrc  cfggen.py  checkregs.py  clang-tidy.yml  darjeeling-ocd.cfg  devproxy.py  dtm.py  earlgrey-ocd.cfg  flashgen.py  gdbreplay.py  gpiodev.py  loghelp.py  make_release.sh  mbbdef.py  ot-format.sh  ot-tidy.sh  otboot.sh  otpconv.py  otpdm.py  otphelp.py  otptool.py  otrun.sh  ottests.sh  present.py  pyot.py  spidevflash.py  swexit.py  tap.py  uartmux.py
scripts/opentitan/ot/: __init__.py  (+2 more)
scripts/tracetool/: __init__.py
softmmu/: vl.c
system/: cpus.c  memory.c  vl.c
util/: fifo8.c
(+55 files in other folders)
