# Ibex Demo System

system_ss.add(when: 'CONFIG_IBEXDEMO_GPIO', if_true: files('ibexdemo_gpio.c'))
system_ss.add(when: 'CONFIG_IBEXDEMO_SIMCTRL', if_true: files('ibexdemo_simctrl.c'))
system_ss.add(when: 'CONFIG_IBEXDEMO_SPI', if_true: files('ibexdemo_spi.c'))
system_ss.add(when: 'CONFIG_IBEXDEMO_TIMER', if_true: files('ibexdemo_timer.c'))
system_ss.add(when: 'CONFIG_IBEXDEMO_UART', if_true: files('ibexdemo_uart.c'))
